language/move-lang/tests/move_check/parser/acquires_list_generic.move
module M {
    struct CupC<T: copyable> {}
    resource struct R {}
    resource struct B<T> {}

    foo() acquires B<CupC<R>> {
        abort 0
    }
}
